# ChjhsLightDance

./: .gitignore
Bridger/: package-lock.json  package.json  tsconfig.json  webpack.config.js
Bridger/data/: board_config.json
Bridger/src/: index.ts  messages.types.ts
Bridger/src/data/: boardConfig.ts
Bridger/src/execute/: client.ts  manager.ts
Bridger/src/lib/: expressLib.ts
Bridger/src/routes/: app.ts  router.ts
Client/: commands.h  globals.h  lightGroups.h  main.cpp  wsCommands.h
Client/sample_jsons/: sample_config.json  sample_dance.json
LightDanceClient/: package-lock.json  package.json  tailwind.config.js  vite.config.ts.timestamp-1685072606771-623c2cebd48d5.mjs
LightDanceClient/src/: App.tsx  main.tsx  styles.css
LightDanceClient/src-py/: Sample_Dance.xlsx  cal_length.py  cal_length.spec  compile_dance.py  compile_dance.spec  light_group_parser.py  output.json
LightDanceClient/src-tauri/: Cargo.toml  tauri.conf.json
LightDanceClient/src-tauri/icons/: icon.icns
LightDanceClient/src-tauri/resources/: cal_length.py
LightDanceClient/src-tauri/resources/py-scripts/: cal_length.py  compile_dance.py  light_group_parser.py
LightDanceClient/src-tauri/src/: main.rs
LightDanceClient/src/Stores/: Show.ts  (+4 more)
LightEditor/: package-lock.json  package.json
LightEditor/src/: App.css
PyConfigParsers/: cal_length.py  color_lib.py  compile_dance.py  light_group_parser.py
RPiClient/: lightGroups.py  main.py  parsers.py  wsHandler.py
Utilities/lightcfg_validation/: val_lg_parser.py  validate_excel.py
Utilities/manual_lighting/: light_control.py
(+40 files in other folders)
