[package]
name = "light_dance_client"
version = "1.0.0"
description = "Chingshin Academy's Light Dance Manager for the 2023 Shanghai-Taipei Exchange Program"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-all", "fs-all", "path-all", "shell-all", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
get_if_addrs = "0.5.3"
open = "1.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
